--- a/about.html
+++ b/about.html
@@ -61,9 +61,9 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark custom-navbar">
     <a class="nav-link" href="index.html" id="services">
-    <img src="Images/logo.jpg" alt="logo" height="60px" width="60px"></a>
+    <img src="Images/logo.jpg" alt="logo" height="40px" width="40px"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +72,7 @@
 
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto ul">
     
             <li class="nav-item">
               <a class="nav-link" href="about.html" id="services">About Us</a>
@@ -86,9 +86,8 @@
         </ul>
 
         <div class="button" style="margin-top: 15px;">
-            <button type="button" class="btn " data-toggle="modal" data-target="#exampleModalCenter1" style="background-color: white;">
-                Schedule Meeting
-            </button>
+          <button class="btn btn-outline-success custom-btn" style="margin-right: 15px" type="submit"
+          data-toggle="modal" data-target="#exampleModalCenter1">Schedule Meeting</button>
         </div>
     </div>
 </nav>
