--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -11,6 +12,7 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="stylesheet" href="./CSS/Indexstyle.css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -23,6 +25,8 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+
+  <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -61,10 +65,9 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark custom-navbar">
     <a class="nav-link" href="index.html" id="services">
-    <img src="Images/logo.jpg" alt="logo" height="60px" width="60px"></a>
-
+    <img src="Images/logo.jpg" alt="logo" height="40px" width="40px"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -73,22 +76,19 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-    
-            <li class="nav-item">
-              <a class="nav-link" href="about.html" id="services">About Us</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="services.html" id="services"> Our Services</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link " href="contact.html" id="contact">Contact Us</a>
-          </li>
-        </ul>
 
-        <div class="button" style="margin-top: 15px;">
-            <button type="button" class="btn " data-toggle="modal" data-target="#exampleModalCenter1" style="background-color: white;">
-                Schedule Meeting
-            </button>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html" id="about">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="services.html" id="services"> Our Services</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="contact.html" id="contact">Contact Us</a>
+            </li>
+        </ul>
+        <div class="button" style="margin-top: 10px;">
+          <button class="btn btn-outline-success" style="margin-bottom: 10px" type="submit" data-toggle="modal" data-target="#exampleModalCenter1">Schedule Meeting</button>
         </div>
     </div>
 </nav>
@@ -137,8 +137,6 @@
                             <input type="text" class="form-control" id="exampleInputUsername1"
                                 aria-describedby="emailHelp" placeholder="Full Address">
                         </div>
-
-
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
