--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Home</title>
+
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <img src="Images/logo.jpg" alt="logo" height="60px" width="60px">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark custom-navbar">
+        <a class="nav-link" href="index.html" id="services">
+        <img src="Images/logo.jpg" alt="logo" height="40px" width="40px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +33,7 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html" id="services">About Us</a>
+                    <a class="nav-link" href="about.html" id="about">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="services.html" id="services"> Our Services</a>
@@ -41,13 +43,15 @@
                 </li>
             </ul>
 
-            <div class="button" style="margin-top: 15px;">
-                <button type="button" class="btn " data-toggle="modal" data-target="#exampleModalCenter1" style="background-color: white;">
-                    Schedule Meeting
-                </button>
+            <div class="button" style="margin-top: 10px">
+                <button class="btn btn-outline-success" style="margin-bottom: 10px" type="submit" data-toggle="modal" data-target="#exampleModalCenter1">Schedule Meeting</button>
+           
+              
             </div>
         </div>
     </nav>
+ 
+
 
 
     <!-- modal -->
@@ -170,19 +174,14 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active" id="tent">
-                <p>jajsnxos</p>
             </div>
             <div class="carousel-item" id="catering">
-                <p>jajsnxos</p>
             </div>
             <div class="carousel-item" id="dj">
-                <p>jajsnxos</p>
             </div>
             <div class="carousel-item" id="videocam">
-                <p>jajsnxos</p>
             </div>
             <div class="carousel-item" id="decoration">
-                <p>jajsnxos</p>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -259,10 +258,10 @@
 
             <div class="row">
                 <!-- Blog block --> 
-                <div class="blog col-lg-4 col-md-6 col-sm-12 wow fadeInUp animated" >
+                <div class="blog col-lg-4 col-md-6 col-sm-12 wow fadeInUp animated">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="#"><img src="Images/decoration.png" alt=""></a></figure>
+                            <figure class="image"><a href="decoration.html"><img src="Images/decoration.png" alt="" ></a></figure>
                         </div>
                         <div class="lower-content">
                             <div class="info-box">
@@ -271,7 +270,7 @@
                             </div>
                             <h4><a href="#">Some Content Here</a></h4>
                             <div class="text">Some Content Here </div>
-                            <div class="link-box"><a href="services.html"><span class="fa fa-angle-right"></span>Read More</a></div>
+                            <div class="link-box"><a href="decoration.html"><span class="fa fa-angle-right"></span>Read More</a></div>
                         </div>
                     </div>
                 </div>
@@ -280,7 +279,7 @@
                 <div class="blog col-lg-4 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="400ms" >
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="services.html"><img src="./Images/catering.png" alt=""></a></figure>
+                            <figure class="image"><a href="Catering.html"><img src="./Images/catering.png" alt=""></a></figure>
                         </div>
                         <div class="lower-content">
                             <div class="info-box">
@@ -289,7 +288,7 @@
                             </div>
                             <h4><a href="#">Some Content here</a></h4>
                             <div class="text">Some Content here</div>
-                            <div class="link-box"><a href="services.html"><span class="fa fa-angle-right"></span>Read More</a></div>
+                            <div class="link-box"><a href="Catering.html"><span class="fa fa-angle-right"></span>Read More</a></div>
                         </div>
                     </div>
                 </div>
@@ -298,7 +297,7 @@
                 <div class="blog col-lg-4 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="800ms">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="services.html"><img src="Images/dj.png" alt=""></a></figure>
+                            <figure class="image"><a href="dj.html"><img src="Images/dj.png" alt=""></a></figure>
                         </div>
                         <div class="lower-content">
                             <div class="info-box">
@@ -307,7 +306,7 @@
                             </div>
                             <h4><a href="#">Some Content here</a></h4>
                             <div class="text">Some Content Here </div>
-                            <div class="link-box"><a href="services.html"><span class="fa fa-angle-right"></span>Read More</a></div>
+                            <div class="link-box"><a href="dj.html"><span class="fa fa-angle-right"></span>Read More</a></div>
                         </div>
                     </div>
                 </div>
