--- a/videoCam.html
+++ b/videoCam.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Services - Moderna Bootstrap Template</title>
+    <title>video Cam</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -122,8 +122,8 @@
             <div class="container">
 
                 <div class="custom-head">
-                    <h2><strong>Marriage Hall</strong></h2>
-                    <p class="text-muted">Get a marriage hall</p>
+                    <h2><strong>video Camera</strong></h2>
+                    <p class="text-muted">Record your Day with us to get better video experience.</p>
                 </div>
 
             </div>
@@ -134,7 +134,7 @@
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-4" data-aos="flip-down" data-aos-delay="100">
-                        <img src="Images/marriage.jpg" alt="marriage" class="img-fluid custom-image-tag">
+                        <img src="Images/videocam.png" alt="marriage" class="img-fluid custom-image-tag">
                     </div>
                     <div class="col-8 text-color" data-aos="zoom-in-left" data-aos-delay="200">
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam quas nulla obcaecati
@@ -155,7 +155,7 @@
                                 excepturi unde suscipit numquam minus repudiandae?</p>
                     </div>
                     <div class="col-4" data-aos="flip-down" data-aos-delay="300">
-                        <img src="Images/marriage.jpg" alt="marriage" class="img-fluid custom-image-tag">
+                        <img src="Images/17.png" alt="marriage" class="img-fluid custom-image-tag">
                     </div>
 
                 </div>
