--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Services - Moderna Bootstrap Template</title>
+  <title>Services</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -294,7 +294,7 @@
   <!-- ======= Footer ======= -->
 
 
-  <footer style="background-color: #2c292f">
+  <!-- <footer style="background-color: #2c292f">
     <div class="container">
       <div class="row ">
         <div class="col-md-4 text-center text-md-left ">
@@ -345,7 +345,88 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
+
+  <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+
+    <div class="footer-newsletter">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <h2>Soft Planner</h2>
+            <p>we make your Shaadi special.</p>
+          </div>
+           <div class="col-lg-6">
+            <h5 class="links">Our Social Media Handles:-</h5>
+            <div class="links mt-3">
+              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            </div>
+          </div> 
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 footer-links footer">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Our Services</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Decoration</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Catering</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">DJ</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Marriage Hall</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Tent</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Video Cam</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h4>Contact Us</h4>
+            <p class="text-white"> <i class="fa fa-map-marker mx-2 "></i>
+                Address-shop no-D/84,dvc central market,bokaro thermal,bokaro jharkhand-829107</p>
+                <div>
+                    <p><!-- <i class="fa fa-phone  mx-2 "></i> --><strong>phone:-</strong> +91 7378757086</p>
+                </div>
+                <div>
+                    <p><i class="fa fa-envelope  mx-2"></i><a
+                            href="infot@weplanwedding.com">support@softplanner.in</a></p>
+                </div>
+            </div>
+          <div class="col-lg-3 col-md-6 footer-info">
+            <h3>Payment Method</h3>
+            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <div class="social-links mt-3">
+              
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="copyright">
+        <p>©2020 Soft Planner</p>          
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
