--- a/decoration.html
+++ b/decoration.html
@@ -43,7 +43,7 @@
 
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto ul">
 
                 <li class="nav-item">
                     <a class="nav-link" href="about.html" id="about">About Us</a>
@@ -57,7 +57,7 @@
             </ul>
 
             <div class="button" style="margin-top: 10px;">
-                <button class="btn btn-outline-success" style="margin-bottom: 10px" type="submit" data-toggle="modal" data-target="#exampleModalCenter1">Schedule Meeting</button>
+                <button class="btn btn-outline-success" style="margin-right: 15px" type="submit" data-toggle="modal" data-target="#exampleModalCenter1">Schedule Meeting</button>
            
             </div>
         </div>
@@ -162,8 +162,10 @@
           </div>
       </div>
       </div>
-      <div class="row justify-content-center md-1">
-          <div class="col-3"  data-aos="fade-up"data-aos-delay="500"> <button type="button" class="btn-block btn-primary btn-lg" >BOOK NOW</button></div>
+      <div class="container-fluid">
+        <div class="row justify-content-center md-1">
+          <div class="col-3"  data-aos="fade-up"data-aos-delay="500"> <button type="button" class="btn-block btn-warning btn-lg" >BOOK NOW</button></div>
+      </div>
        
     </div>
   </section>
@@ -211,7 +213,7 @@
       </div>
     </section> --><!-- End Services Section -->
 
-    <section class="why-us section-bg new_card" data-aos="fade-up" date-aos-delay="200">
+    <section class="why-us section-bg new_card mt-5" data-aos="fade-up" date-aos-delay="200">
       <div class="container_card">
         <div class="internal_card">
           <div class="card_content">
@@ -244,30 +246,30 @@
         <div class="internal_card">
           <div class="card_content">
   
-            <h1>DECORATION</h1>
+            <h1>MARRIAGE HALL</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab magni debitis, dolores praesentium 
               veritatis aliquid ipsam itaque blanditiis esse sed!</p>
-              <a href="#">READ MORE</a>
+              <a href="marriage.html">READ MORE</a>
           </div>
         </div>
 
         <div class="internal_card">
           <div class="card_content">
   
-            <h1>DECORATION</h1>
+            <h1>TENT</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab magni debitis, dolores praesentium 
               veritatis aliquid ipsam itaque blanditiis esse sed!</p>
-              <a href="#">READ MORE</a>
+              <a href="tent.html">READ MORE</a>
           </div>
         </div>
 
         <div class="internal_card">
           <div class="card_content">
   
-            <h1>DECORATION</h1>
+            <h1>VIDEO CAM</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab magni debitis, dolores praesentium 
               veritatis aliquid ipsam itaque blanditiis esse sed!</p>
-              <a href="#">READ MORE</a>
+              <a href="videoCam.html">READ MORE</a>
           </div>
         </div>
       </div>
@@ -371,7 +373,7 @@
   <!-- ======= Footer ======= -->
   
 
-  <footer style="background-color: #2c292f">
+<!--   <footer style="background-color: #2c292f">
     <div class="container">
         <div class="row ">
             <div class="col-md-4 text-center text-md-left ">
@@ -423,7 +425,90 @@
             </div>
         </div>
     </div>
-</footer>
+</footer> -->
+
+
+<footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+
+  <div class="footer-newsletter">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <h2>Soft Planner</h2>
+          <p>we make your Shaadi special.</p>
+        </div>
+        <div class="col-lg-6">
+          <h5 class="links">Our Social Media Handles:-</h5>
+          <div class="links mt-3">
+            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-3 col-md-6 footer-links footer">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="">Terms of service</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="">Privacy policy</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-6 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="decoration.html">Decoration</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="Catering.html">Catering</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="dj.html">DJ</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="marriage.html">Marriage Hall</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="tent.html">Tent</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="videoCam.html">Video Cam</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-6 footer-contact">
+          <h4>Contact Us</h4>
+          <p class="text-white"> <i class="fa fa-map-marker mx-2 "></i>
+            Address-shop no-D/84,dvc central market,bokaro thermal,bokaro jharkhand-829107</p>
+          <div>
+            <p>
+              <!-- <i class="fa fa-phone  mx-2 "></i> --><strong>phone:-</strong> +91 7378757086
+            </p>
+          </div>
+          <div>
+            <p><i class="fa fa-envelope  mx-2"></i><a href="infot@weplanwedding.com">support@softplanner.in</a></p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 footer-info">
+          <h3>Payment Method</h3>
+          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies
+            darta donna mare fermentum iaculis eu non diam phasellus.</p>
+          <div class="social-links mt-3">
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="copyright">
+      <p>©2020 Soft Planner</p>
+    </div>
+  </div>
+</footer><!-- End Footer -->
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
