--- a/services.html
+++ b/services.html
@@ -1,38 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<<<<<<< HEAD
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Services</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon1.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <link rel="stylesheet" href="./CSS/Indexstyle.css">
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap"
-    rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-
-  <link href="assets/css/style.css" rel="stylesheet">
-
-</head>
-
-=======
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -60,27 +27,19 @@
     <link href="assets/css/style.css" rel="stylesheet">
   
   </head>
->>>>>>> ff5a54584fee2a1f8eafa9dbf7c79c139c2553e6
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-dark custom-navbar">
     <a class="nav-link" href="index.html" id="services">
-<<<<<<< HEAD
       <img src="Images/logo.jpg" alt="logo" height="40px" width="40px"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-=======
-    <img src="Images/logo.jpg" alt="logo" height="40px" width="40px"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
->>>>>>> ff5a54584fee2a1f8eafa9dbf7c79c139c2553e6
+
     </button>
 
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-<<<<<<< HEAD
       <ul class="navbar-nav mr-auto ul">
 
         <li class="nav-item">
@@ -126,77 +85,7 @@
             <div class="form-group">
               <label for="exampleInputPassword1">Mobile Number</label>
               <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Mobile Number">
-=======
-        <ul class="navbar-nav mr-auto">
 
-            <li class="nav-item">
-                <a class="nav-link" href="about.html" id="about">About Us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="services.html" id="services"> Our Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " href="contact.html" id="contact">Contact Us</a>
-            </li>
-        </ul>
-
-        <div class="button" style="margin-top: 10px">
-            <button class="btn btn-outline-success" style="margin-bottom: 10px" type="submit" data-toggle="modal" data-target="#exampleModalCenter1">Schedule Meeting</button>
-       
-          
-        </div>
-    </div>
-</nav>
-
-
-<div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Schedule Meeting</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Name</label>
-                            <input type="text" class="form-control" id="exampleInputUsername1"
-                                aria-describedby="emailHelp" placeholder="Enter email">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Email</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Mobile Number</label>
-                            <input type="number" class="form-control" id="exampleInputEmail1"
-                                placeholder="Mobile Number">
-
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Date</label>
-                            <input type="date" class="form-control" id="exampleInputEmail1" placeholder="date">
-
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Time</label>
-                            <input type="time" class="form-control" id="exampleInputEmail1" placeholder="time">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Address</label>
-                            <input type="text" class="form-control" id="exampleInputUsername1"
-                                aria-describedby="emailHelp" placeholder="Full Address">
-                        </div>
-
-
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
->>>>>>> ff5a54584fee2a1f8eafa9dbf7c79c139c2553e6
 
             </div>
             <div class="form-group">
@@ -485,23 +374,23 @@
           <div class="col-lg-3 col-md-6 footer-links footer">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="">Privacy policy</a></li>
             </ul>
           </div>
-
+  
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Decoration</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Catering</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">DJ</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marriage Hall</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Tent</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Video Cam</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="decoration.html">Decoration</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="Catering.html">Catering</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="dj.html">DJ</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="marriage.html">Marriage Hall</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="tent.html">Tent</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="videoCam.html">Video Cam</a></li>
             </ul>
           </div>
 
